Bug 432307 - Cancel drag'n drop does not work
Summary: Cancel drag'n drop does not work
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 5.15.3
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-30 11:45 UTC by Jean-Marie Favreau
Modified: 2021-01-31 09:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Marie Favreau 2021-01-30 11:45:49 UTC
When you move a message from the message list to another folder by drag and drop, and you want to cancel it by clicking on the "cancel" button from the popup or by clicking outside of the popup, the message is moved anyway.


STEPS TO REPRODUCE
1. select a message in the message list
2. drag and drop it in another folder
3. cancel this moving or copying

OBSERVED RESULT
The message is moved to the target message.


EXPECTED RESULT
The message stays in the original folder.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: up-to-date debian testing
(available in About System)
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Laurent Montel 2021-01-31 08:58:26 UTC
Cancel works for me.
.But indeed clicking outside the popup doesn"t cancel.
I will look at it
Comment 2 Laurent Montel 2021-01-31 09:13:49 UTC
Git commit b73096c979ffc8410aa484c657d936ac00bbd1f5 by Laurent Montel.
Committed on 31/01/2021 at 09:12.
Pushed by mlaurent into branch 'release/20.12'.

Fix Bug 432307 - Cancel drag'n drop does not work
FIXED-IN: 5.16.2

LinkAction was not defined => equal nullptr
when we click outside exec() return nullptr
=> it thinks that we linked message not canceled it

M  +5    -5    src/widgets/dragdropmanager.cpp

https://invent.kde.org/pim/akonadi/commit/b73096c979ffc8410aa484c657d936ac00bbd1f5