Fix Bug 432307 - Cancel drag'n drop does not work

BUG: 432307
FIXED-IN: 5.16.2

LinkAction was not defined => equal nullptr
when we click outside exec() return nullptr
=> it thinks that we linked message not canceled it