src/widgets/dragdropmanager.cpp
@@ -228,18 +228,18 @@ bool DragDropManager::processDropEvent(QDropEvent *event, bool &menuCanceled, bo
     }
 
     popup.addSeparator();
-    popup.addAction(QIcon::fromTheme(QStringLiteral("process-stop")), i18n("C&ancel") + QLatin1Char('\t') + QKeySequence(Qt::Key_Escape).toString());
+    QAction *cancelAction = popup.addAction(QIcon::fromTheme(QStringLiteral("process-stop")), i18n("C&ancel") + QLatin1Char('\t') + QKeySequence(Qt::Key_Escape).toString());
 
     QAction *activatedAction = popup.exec(m_view->mapToGlobal(event->pos()));
-    if (activatedAction == moveDropAction) {
+    if (!activatedAction || (activatedAction == cancelAction)) {
+        menuCanceled = true;
+        return false;
+    } else if (activatedAction == moveDropAction) {
         event->setDropAction(Qt::MoveAction);
     } else if (activatedAction == copyDropAction) {
         event->setDropAction(Qt::CopyAction);
     } else if (activatedAction == linkAction) {
         event->setDropAction(Qt::LinkAction);
-    } else {
-        menuCanceled = true;
-        return false;
     }
     return true;
 }
